--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -58,10 +58,7 @@
    ],
    "source": [
     "# Create our session (link) from Python to the DB\n",
-    "session = Session(engine)\n",
-    "\n",
-    "first_row = session.query(Measurement).first()\n",
-    "first_row.__dict__"
+    "session = Session(engine)\n"
    ]
   },
   {
